# CSE334-concurrency-rust-parallelism-slides

./: .gitignore  README.md
Demos/false_sharing_demo/: Cargo.toml  README.md
Demos/false_sharing_demo/src/: main.rs
Demos/message_dispatch_demo/: Cargo.toml  README.md
Demos/message_dispatch_demo/src/: enum_based.rs  main.rs  trait_based.rs
Lectures/09-10/demos/src/: main.rs  soln.main.rs
Lectures/09-10/demos/tests/: soln.01_factorial.rs  soln.02_array_max.rs
Lectures/11/demos/tests/: 03_struct.rs  07_calc.rs  08c_vec_max.rs  soln.03.struct.rs  soln.07_calc.rs  soln.08c_vec_max.rs
Lectures/12/demos/src/: main.rs
Lectures/12/demos/tests/: 09a_iterator_demo.rs  09c_linked_list.rs  soln.09a_iterator_demo.rs  soln.09c_linked_list.rs
Lectures/13/demos/: Cargo.toml
Lectures/13/demos/tests/: 09c_linked_list.rs
Lectures/23/demos/gpu-example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cu  vector_add.cu  vector_add.h
Lectures/27/demos/rust-ffi/: .gitignore  README.md
Lectures/27/demos/rust-ffi/c-to-rust/: Cargo.toml  Makefile  README.md  expected_output.txt
Lectures/27/demos/rust-ffi/cpp-rust-cpp/: Cargo.toml  Makefile  (+2 more)
Lectures/27/demos/rust-ffi/python-to-rust/: Cargo.toml  README.md  pyproject.toml
Lectures/27/demos/rust-ffi/python-to-rust/examples/: demo.py
Lectures/27/demos/rust-ffi/python-to-rust/src/: lib.rs
Lectures/27/demos/rust-ffi/python-to-rust/tests/: test_python_to_rust.py
Lectures/5/demo/: .gitignore  Makefile  gen_csv.sh  main.c  plot.py
Lectures/9-10/demos/tests/: 01_factorial.rs  02_array_max.rs
(+17 files in other folders)
